src/snapshots/grdy__tests__render_table__ansi_colored_values.snap
---
source: src/main.rs
expression: "render_table(&rows, true, false)"
---
+--------+------------+
| status | name       |
+--------+------------+
| [32m●[0m      | api-server |
| [31m●[0m      | db-worker  |
+--------+------------+
