src/snapshots/grdy__tests__render_table__multiple_rows.snap
---
source: src/main.rs
expression: "render_table(&rows, false, false)"
---
╭─────────┬─────╮
│ name    │ age │
├─────────┼─────┤
│ Alice   │  30 │
│ Bob     │  25 │
│ Charlie │  35 │
╰─────────┴─────╯
