src/snapshots/grdy__tests__render_table__multiple_rows_plain.snap
---
source: src/main.rs
assertion_line: 399
expression: "render_table(&rows, false, true)"
---
╭─────┬─────────╮
│ age │ name    │
├─────┼─────────┤
│ 30  │ Alice   │
│ 25  │ Bob     │
│ 35  │ Charlie │
╰─────┴─────────╯
