src/snapshots/grdy__tests__render_table__multiple_rows_plain_with_stripe.snap
---
source: src/main.rs
expression: "render_table(&rows, Style::Plain, true, false)"
---
[1mname[0m   [1mage[0m
Alice   30
[2mBob     25[0m
