src/snapshots/grdy__tests__render_table__multiple_rows_with_styling.snap
---
source: src/main.rs
assertion_line: 410
expression: "render_table(&rows, false, false)"
---
╭─────┬─────────╮
│ [1mage[0m │ [1mname[0m    │
├─────┼─────────┤
│ 30  │ Alice   │
[2m│ 25  │ Bob     │[0m
│ 35  │ Charlie │
[2m│ 28  │ Diana   │[0m
╰─────┴─────────╯
