src/snapshots/grdy__tests__render_table__nested_values.snap
---
source: src/main.rs
expression: "render_table(&rows, false, false)"
---
╭───────────┬──────────╮
│ data      │ meta     │
├───────────┼──────────┤
│ [3 items] │ {1 keys} │
╰───────────┴──────────╯
