src/snapshots/grdy__tests__render_table__single_row.snap
---
source: src/main.rs
expression: "render_table(&rows, false, false)"
---
╭───────┬─────╮
│ name  │ age │
├───────┼─────┤
│ Alice │  30 │
╰───────┴─────╯
