src/snapshots/grdy__tests__render_table__single_row_ascii.snap
---
source: src/main.rs
expression: "render_table(&rows, true, false)"
---
+-------+-----+
| name  | age |
+-------+-----+
| Alice |  30 |
+-------+-----+
