src/snapshots/grdy__tests__render_table__single_row_compact.snap
---
source: src/main.rs
assertion_line: 389
expression: "render_table(&rows, true, true)"
---
+-----+-------+
| age | name  |
+-----+-------+
| 30  | Alice |
+-----+-------+
