src/snapshots/grdy__tests__render_table__single_row_plain.snap
---
source: src/main.rs
assertion_line: 383
expression: "render_table(&rows, false, true)"
---
╭─────┬───────╮
│ age │ name  │
├─────┼───────┤
│ 30  │ Alice │
╰─────┴───────╯
