src/snapshots/grdy__tests__render_table__sparse_data.snap
---
source: src/main.rs
assertion_line: 420
expression: "render_table(&rows, false, true)"
---
╭───┬───╮
│ a │ b │
├───┼───┤
│ 1 │   │
│   │ 2 │
│ 3 │ 4 │
╰───┴───╯
